--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,14 +1,15 @@
-name: 2. VPC Infra
+name: 2. Configure and Test Actions
 
 on:
   push:
     paths:
-      - 'iac/vpc.yml'
+      - 'cfn/s3bucket.yml'
       - '.github/workflows/02-vpc.yml'
     branches: [ "main" ]
 
 env:
   AWS_REGION: "us-east-1"
+  BUCKET_NAME: "devopsdsm-s3-bucket"
 
 permissions:
   id-token: write # This is required for aws oidc connection
@@ -35,16 +36,16 @@ jobs:
         role-session-name: GitHub-OIDC
         role-duration-seconds: 1200
 
-    - name: Run VPC Test
-      run: |
-        pip install boto3
-        python -m unittest iac_tests.test_vpc_cloudformation
-
-    - name: Deploy VPC Infra to AWS
+    - name: Deploy CloudFormation s3bucket stack to AWS
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
-        name: rag-eval-vpc-infra
-        template: iac/vpc.yml
-        capabilities: CAPABILITY_NAMED_IAM
-        no-fail-on-empty-changeset: "1"
-        tags: '[{"Key": "owner", "Value": "mvincent@sourceallies.com"}]'
+        name: ${{ env.BUCKET_NAME }}
+        template: cfn/s3bucket.yml
+        tags: '[{"Key": "owner", "Value": "cfunk@sourceallies.com"}]'
+     
+     - name: Test upload to s3 bucket
+      run: |
+        echo "Testing" >> test.txt
+        aws s3 mv test.txt s3://${{ env.BUCKET_NAME }}
+        aws s3 ls
+        aws s3 ls s3://${{ env.BUCKET_NAME }}
