--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -36,6 +36,11 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
         role-session-name: GitHub-OIDC
         role-duration-seconds: 1200
+        
+    - name: Install cdk npm dependencies
+      run: npm ci
+      working_directory: cdk
+
     
     - name: cdk diff
       uses: youyo/aws-cdk-github-actions@v2
