--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -39,9 +39,9 @@ jobs:
         
     - name: Install cdk npm dependencies
       run: npm ci
-      working_directory: cdk
+      with:
+        working_directory: cdk
 
-    
     - name: cdk diff
       uses: youyo/aws-cdk-github-actions@v2
       with:
