--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -38,8 +38,9 @@ jobs:
         role-duration-seconds: 1200
         
     - name: Install cdk npm dependencies
-      working_directory: ./cdk
       run: npm ci
+      working_directory: cdk
+      
 
     - name: cdk diff
       uses: youyo/aws-cdk-github-actions@v2
