--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'cfn/s3bucket.yml'
       - '.github/workflows/config.yml'
-      - 'cdk/*'
+      - 'cdk/cdk.ts'
     branches: [ "main", "dev-cdk" ]
 
 env:
