bootstrap before cdk deploy

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -53,6 +53,12 @@ jobs:
         cdk_subcommand: 'synth'
         working_dir: 'cdk'
 
+    - name: cdk synth
+      uses: youyo/aws-cdk-github-actions@v2
+      with:
+        cdk_subcommand: 'bootstrap'
+        working_dir: 'cdk'
+
     - name: cdk deploy
       uses: youyo/aws-cdk-github-actions@v2
       with:
