--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -41,6 +41,13 @@ jobs:
     - name: Install cdk npm dependencies
       run: npm ci
       working-directory: cdk
+
+    - name: cdk bootstrap
+      uses: youyo/aws-cdk-github-actions@v2
+      with:
+        cdk_subcommand: 'bootstrap'
+        cdk_args: '${{ env.AWS_ACCOUNT }}/${{ env.AWS_REGION }}'
+        working_dir: 'cdk'
       
     - name: cdk diff
       uses: youyo/aws-cdk-github-actions@v2
@@ -52,13 +59,6 @@ jobs:
       uses: youyo/aws-cdk-github-actions@v2
       with:
         cdk_subcommand: 'synth'
-        working_dir: 'cdk'
-
-    - name: cdk bootstrap
-      uses: youyo/aws-cdk-github-actions@v2
-      with:
-        cdk_subcommand: 'bootstrap'
-        cdk_args: 'aws://${{ env.AWS_ACCOUNT }}/${{ env.AWS_REGION }}'
         working_dir: 'cdk'
 
     - name: cdk deploy
