--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -47,19 +47,13 @@ jobs:
       working-directory: cdk
       
     - name: cdk diff
-      uses: youyo/aws-cdk-github-actions@v2
-      with:
-        cdk_subcommand: 'diff'
-        working_dir: 'cdk'
+      run: npx cdk diff
+      working-directory: cdk
 
     - name: cdk synth
-      uses: youyo/aws-cdk-github-actions@v2
-      with:
-        cdk_subcommand: 'synth'
-        working_dir: 'cdk'
+      run: npx cdk synth
+      working-directory: cdk
 
     - name: cdk deploy
-      uses: youyo/aws-cdk-github-actions@v2
-      with:
-        cdk_subcommand: 'deploy'
-        working_dir: 'cdk'
+      run: npx cdk deploy
+      working-directory: cdk
