--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -5,7 +5,9 @@ on:
     paths:
       - 'cfn/s3bucket.yml'
       - '.github/workflows/config.yml'
-      - 'cdk/cdk.ts'
+      - 'cdk/bin/cdk.ts'
+      - 'cdk/lib/cdk-stack.ts'
+      
     branches: [ "main", "dev-cdk" ]
 
 env:
