--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,7 +7,7 @@ on:
       - '.github/workflows/config.yml'
       - 'cdk/bin/cdk.ts'
       - 'cdk/lib/cdk-stack.ts'
-    branches: [ "main", "dev-cdk" ]
+    branches: [ "main", "more-cdk-dev" ]
 
 env:
   AWS_REGION: "us-east-1"
