--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -3,11 +3,10 @@ name: 1. Configure and Test Actions
 on:
   push:
     paths:
-      - 'cfn/s3bucket.yml'
       - '.github/workflows/config.yml'
       - 'cdk/bin/cdk.ts'
       - 'cdk/lib/cdk-stack.ts'
-    branches: [ "main", "more-cdk-dev" ]
+    branches: [ "main" ]
 
 env:
   AWS_REGION: "us-east-1"
