--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         role-to-assume: ${{ secrets.AWS_ROLE }}
         aws-region: ${{ env.AWS_REGION }}
-        role-session-name: GitHub-`
+        role-session-name: GitHub-OIDC
         role-duration-seconds: 1200
         
     - name: Install cdk npm dependencies
