aws_account in github secret

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -39,6 +39,8 @@ jobs:
     - name: cdk bootstrap
       run: npx cdk bootstrap
       working-directory: cdk
+      with:
+        aws_account: ${{ secrets.AWS_ACCOUNT }}
       
     - name: cdk diff
       run: npx cdk diff
