--- a/.github/workflows/cfn-invalidate.yml
+++ b/.github/workflows/cfn-invalidate.yml
@@ -1,8 +1,8 @@
-name: 1. Configure and Test Actions
+name: 1.Invalidate CloudFront distributions for devopsdsm.com
+#This workflow is used to invalidate cloudfront distributions when updates to html files are made
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 env:
   AWS_REGION: "us-east-1"
@@ -17,7 +17,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test_and_deploy:
+  connect_and_invalidate:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,23 +31,6 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
         role-session-name: GitHub-OIDC
         role-duration-seconds: 1200
-        
-    - name: Install cdk npm dependencies
-      run: npm ci
-      working-directory: cdk
-
-    - name: cdk bootstrap
-      run: npx cdk bootstrap ${{ secrets.AWS_ACCOUNT }}/${{ env.AWS_REGION }}
-      working-directory: cdk
-      
-    - name: cdk diff
-      run: npx cdk diff
-      working-directory: cdk
-
-    - name: cdk synth
-      run: npx cdk synth
-      working-directory: cdk
-
-    - name: cdk deploy
-      run: npx cdk deploy --require-approval never
-      working-directory: cdk
+    
+    - name: Invalidate CloudFront distributions
+      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRO_ID_1 }} --paths '/*''
