--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -2,7 +2,7 @@ name: 1. Configure and Deploy CDK
 
 on:
   push:
-    branches: [ "main", "add-budget" ]
+    branches: [ "main" ]
 
 env:
   AWS_REGION: "us-east-1"
